2015-01-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nntp.el (nntp-send-authinfo): Error out if the password is wrong.

2015-01-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* registry.el: Don't use <class> as a variable.

2014-12-29  Paul Eggert  <eggert@cs.ucla.edu>

	system-name's returned value can vary
	Also, the system-name variable is now obsolete.
	Fixes Bug#19438.
	* message.el (message-make-fqdn):
	* nnvirtual.el (nnvirtual-retrieve-headers)
	(nnvirtual-update-xref-header):
	Prefer (system-name) to system-name, and avoid naming
	locals 'system-name'.

2014-12-29  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-shr): Bind `shr-width' to `fill-column' so that
	lines don't get overlong when responding.

2014-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* registry.el (cl-remf, cl-loop, cl-subseq):
	Alias to remf, loop, and subseq respectively for old Emacsen.

2014-12-19  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus-group.el (gnus-read-ephemeral-bug-group): Bind
	coding-system-for-read and coding-system-for-write only around
	with-temp-file, and make buffer unibyte.  Don't write temp file twice.

2014-12-18  Paul Eggert  <eggert@cs.ucla.edu>

	* registry.el (registry-db): Set default slot later.
	This is because its value is not a literal integer.

2014-12-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (registry-db): Fix default registry-db max-size.

2014-12-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-util.el (mm-with-unibyte-current-buffer): Mark obsolete and
	add warning.

	* gnus-art.el: Fix up compiler warnings.
	(article-display-face, article-display-x-face): Remove unused `face'.
	(gnus-article-browse-html-save-cid-content): Remove unused var `type'.
	(article-date-ut): Remove unused var `first'.
	(gnus-article-prepare): Remove unused var `gnus-article'.
	(gnus-mime-save-part-and-strip): Remove unused var `param'.
	(gnus-mime-inline-part): Remove unused vars `charset', `contents', and